# agent-synth-xfer

./: CMakeLists.txt  README.md  pyproject.toml
agent/: README.md  agent_sdk.py  agent_solution_set.py  args.py  compress.py  learn.py  library_learning.py  main.py  prompts.py  shared.py  synth.py  util.py
agent/examples/: ex_0_1022_48.mlir  ex_0_827_109.mlir  ex_0_827_164.mlir  ex_0_856_162.mlir  ex_0_948_57.mlir  ex_0_965_128.mlir  ex_0_976_183.mlir  ex_0_981_92.mlir  ex_0_985_120.mlir  ex_0_989_102.mlir  ex_1_1604_137.mlir  ex_1_1607_4.mlir  ex_1_1608_54.mlir  ex_1_1625_143.mlir  ex_1_1658_141.mlir  ex_1_1660_148.mlir  ex_1_1662_132.mlir  ex_1_1679_77.mlir  ex_1_1699_124.mlir  ex_1_1718_145.mlir  ex_2_1488_73.mlir  ex_2_1522_116.mlir  ex_2_1541_161.mlir  ex_2_1591_166.mlir  ex_2_1616_102.mlir  ex_2_1628_137.mlir  ex_2_1693_46.mlir  ex_2_1702_155.mlir  ex_2_1714_98.mlir  ex_2_1745_49.mlir  ex_3_1022_156.mlir  ex_3_1120_53.mlir  ex_3_1160_158.mlir  ex_3_1195_30.mlir  ex_3_1245_6.mlir  ex_3_1250_29.mlir  ex_3_1295_2.mlir  ex_3_1485_117.mlir  ex_3_966_1.mlir  ex_3_985_99.mlir  (+11 more)
agent/md/: agent_instructions.md  autodoc_instructions.md  compress_instructions.md  compress_prompt.md  library_instructions.md  library_prompt.md  meet_instructions.md  spec.md
agent/md/domains/: KnownBits.md  SConstRange.md  UConstRange.md
agent/stitch/: converter.py  main.py  matcher.py  search.py  util.py
cpp/: bindings.cpp  bindings_common.hpp  bindings_knownbits.cpp  bindings_mod11.cpp  bindings_mod13.cpp  bindings_mod3.cpp  bindings_mod5.cpp  bindings_mod7.cpp  bindings_sconst_range.cpp  bindings_uconst_range.cpp
cpp/bindings/: bindings_common.hpp  bindings_helpers.cpp
cpp/bindings/domains/: bindings_knownbits.cpp  bindings_knownbits_bw_17_24.cpp  bindings_knownbits_bw_1_8.cpp  bindings_knownbits_bw_25_32.cpp  bindings_knownbits_bw_9_16.cpp  bindings_mod11.cpp  bindings_mod11_bw_17_24.cpp  bindings_mod11_bw_1_8.cpp  bindings_mod11_bw_25_32.cpp  bindings_mod11_bw_9_16.cpp  bindings_mod13.cpp  bindings_mod13_bw_17_24.cpp  bindings_mod13_bw_1_8.cpp  bindings_mod13_bw_25_32.cpp  bindings_mod13_bw_9_16.cpp  bindings_mod3.cpp  bindings_mod3_bw_17_24.cpp  bindings_mod3_bw_1_8.cpp  bindings_mod3_bw_25_32.cpp  bindings_mod3_bw_9_16.cpp  bindings_mod5.cpp  bindings_mod5_bw_17_24.cpp  bindings_mod5_bw_1_8.cpp  bindings_mod5_bw_25_32.cpp  bindings_mod5_bw_9_16.cpp  bindings_mod7.cpp  bindings_mod7_bw_17_24.cpp  bindings_mod7_bw_1_8.cpp  bindings_mod7_bw_25_32.cpp  bindings_mod7_bw_9_16.cpp  bindings_sconst_range.cpp  bindings_sconst_range_bw_17_24.cpp  bindings_sconst_range_bw_1_8.cpp  bindings_sconst_range_bw_25_32.cpp  bindings_sconst_range_bw_9_16.cpp  bindings_uconst_range.cpp  bindings_uconst_range_bw_17_24.cpp  bindings_uconst_range_bw_1_8.cpp  bindings_uconst_range_bw_25_32.cpp  bindings_uconst_range_bw_9_16.cpp
synth_xfer/_util/: eval.py  parse_mlir.py
synth_xfer/cli/: eval_final.py
synth_xfer/egraph_rewriter/: datatypes.py  expr_to_mlir.py
